--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser": "~9.0.0",
     "@angular/platform-browser-dynamic": "~9.0.0",
     "@angular/router": "~9.0.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "bootstrap": "^4.4.1",
+    "bootstrap-icons": "^1.0.0-alpha2",
     "chart.js": "^2.9.3",
     "firebase": "^7.8.2",
     "ng2-charts": "^2.3.0",
