--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.0.0",
+    "@angular/animations": "^9.0.2",
     "@angular/cdk": "^9.0.0",
     "@angular/common": "~9.0.0",
     "@angular/compiler": "~9.0.0",
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~9.0.0",
     "@angular/platform-browser-dynamic": "~9.0.0",
     "@angular/router": "~9.0.0",
+    "angular-animations": "0.0.10",
     "chart.js": "^2.9.3",
     "firebase": "^7.8.2",
     "ng2-charts": "^2.3.0",
