--- a/angular.json
+++ b/angular.json
@@ -30,9 +30,8 @@
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss",
-              "./node_modules/bootstrap/dist/css/bootstrap.min.css"
-            ],
+              "src/styles.scss"
+                        ],
             "scripts": [
               "node_modules/chart.js/dist/Chart.min.js"
             ]
