--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@angular/router": "~9.0.0",
     "@material/snackbar": "^5.1.0",
     "angular-material": "^1.1.21",
-    "angular-star-rating": "^4.0.0-beta.3",
+    "angular-star-rating": "^2.0.0-rc.5",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "firebase": "^7.8.2",
