--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "@angular/platform-browser": "~9.0.0",
     "@angular/platform-browser-dynamic": "~9.0.0",
     "@angular/router": "~9.0.0",
+    "@types/intro.js": "^2.4.6",
     "bootstrap": "^4.4.1",
-    "bootstrap-icons": "^1.0.0-alpha2",
     "chart.js": "^2.9.3",
     "firebase": "^7.8.2",
+    "intro.js": "^2.9.3",
     "ng2-charts": "^2.3.0",
     "ngx-bootstrap": "^5.3.2",
     "rxjs": "~6.5.4",
