--- a/angular.json
+++ b/angular.json
@@ -30,12 +30,10 @@
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss",
-              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "./node_modules/intro.js/introjs.css"
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": [
-              "node_modules/chart.js/dist/Chart.min.js",
-              "node_modules/intro.js/intro.js"
+              "node_modules/chart.js/dist/Chart.min.js"
             ]
           },
           "configurations": {
